<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="135dp"
            android:layout_height="186dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle_7__2_" />

        <LinearLayout
            android:layout_width="157.7dp"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nike_air_zoom_crossover"
                android:textColor="@color/white"
                android:textSize="17.5sp"
                android:fontFamily="@font/exo_extrabold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basketball_shoes"
                android:textColor="@color/white_700"
                android:textSize="10.9sp"
                android:fontFamily="@font/exo_extrabold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_first_basketball_shoe_inspired_by_ladies_of_the_league"
                android:textColor="@color/white_500"
                android:textSize="10.9sp"
                android:fontFamily="@font/exo_extrabold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/exo_extrabold"
                    android:text="@string/_85"
                    app:layout_constraintEnd_toStartOf="@+id/smallprice"
                    android:textSize="17.5sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/smallprice"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/exo_extrabold"
                    android:text="@string/_00"
                    app:layout_constraintStart_toEndOf="@+id/price"
                    android:textSize="10.9sp"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageButton
            android:layout_width="23.9dp"
            android:layout_height="23.9dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/red_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_big" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>