<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo_extrabold"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="28sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo_extrabold"
                        android:text="@string/we_recommend"
                        android:textColor="@color/white_700"
                        android:textSize="17.sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:id="@+id/c1"
                        app:cardCornerRadius="16dp"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginVertical="10dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginHorizontal="5dp">


                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/search"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:layout_marginHorizontal="15dp"
                                android:fontFamily="@font/exo_extrabold"
                                android:textColor="@color/white_700"
                                android:textSize="17.5sp"
                                android:hint="Looking for something..."/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="52dp"
                        android:id="@+id/c2"
                        app:cardCornerRadius="16dp"
                        android:layout_height="52dp"
                        android:background="@color/gray"
                        app:cardBackgroundColor="@color/gray"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/gray"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/slider_03" />
                    </androidx.cardview.widget.CardView>



                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollable"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent">

            <Button
                android:layout_width="56.7dp"
                android:layout_height="32.9dp"
                android:layout_marginEnd="40dp"
                android:text="@string/all"
                android:textSize="17.sp"
                android:textColor="@color/white"
                android:background="@drawable/blue_button"
                android:textAllCaps="false"
                android:fontFamily="@font/exo_extrabold" />
            <Button
                android:layout_width="36dp"
                android:layout_height="32.9dp"
                android:layout_marginEnd="40dp"
                android:background="#00000000"
                android:textSize="17.sp"
                android:fontFamily="@font/exo_extrabold"
                android:text="Nike"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="56dp"
                android:layout_height="32.9dp"
                android:layout_marginEnd="40dp"
                android:textSize="17.sp"
                android:text="Adidas"
                android:textColor="@color/white"
                android:background="#00000000"
                android:textAllCaps="false"
                android:fontFamily="@font/exo_extrabold"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="32.9dp"
                android:layout_marginEnd="40dp"
                android:textSize="17.sp"
                android:background="#00000000"
                android:fontFamily="@font/exo_extrabold"
                android:text="Fila"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="66dp"
                android:layout_height="32.9dp"
                android:textSize="17.sp"
                android:layout_marginEnd="40dp"
                android:background="#00000000"
                android:fontFamily="@font/exo_extrabold"
                android:text="Convers"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_my_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            tools:itemCount="10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollable"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:listitem="@layout/custom_list_my_appeal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>